--- a/Superscript Spark SQL.ipynb
+++ b/Superscript Spark SQL.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### Table of content\n",
     "\n",
-    "    1 Spark\n",
+    "    1 Spark SQL\n",
     "    1.1 Load modules/packages\n",
     "    1.2 Spark connection setup\n",
     "    1.3 Spark SQL selecting/transforming\n",
