--- a/superscript.ipynb
+++ b/superscript.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### Table of content\n",
     "\n",
-    "    1 Spark\n",
+    "    1 Spark Python\n",
     "    1.1 Load modules/packages\n",
     "    1.2 Spark connection setup\n",
     "    1.3 RDD operations\n",
