Update Superscript Spark SQLV7.ipynb

--- a/Superscript Spark SQLV7.ipynb
+++ b/Superscript Spark SQLV7.ipynb
@@ -4059,7 +4059,7 @@
    "outputs": [],
    "source": [
     "# Execute this query in SQL Server Developer.\n",
-    "# WHILE LOOP 3. Joining 3 the tables and quick-viewing the headings. \n",
+    "# WHILE LOOP 3.\n",
     "df = spark.sql(\"\"\"\n",
     "\n",
     "DECLARE @Adid INT \n",
