Update Superscript Spark SQL8.ipynb

--- a/Superscript Spark SQL8.ipynb
+++ b/Superscript Spark SQL8.ipynb
@@ -3916,7 +3916,7 @@
     "        RETURN\n",
     "        END\n",
     "        \n",
-    "        SELECT 'Please choose ALL, DATE, TIME or FLIGHTINFO'\n",
+    "        SELECT 'Please choose ALL, DATE, TIME or FI'\n",
     "\n",
     "END\n",
     "\n",
@@ -3936,7 +3936,7 @@
     "EXEC spVariableData @InfoType = 'ALL'\n",
     "EXEC spVariableData @InfoType = 'DATE'\n",
     "EXEC spVariableData @InfoType = 'TIME'\n",
-    "EXEC spVariableData @InfoType = 'FLIGHTINFO'"
+    "EXEC spVariableData @InfoType = 'FI'"
    ]
   },
   {
